--- a/src/Lestecon.Sequencing.Abstraction/Lestecon.Sequencing.Abstraction.csproj
+++ b/src/Lestecon.Sequencing.Abstraction/Lestecon.Sequencing.Abstraction.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentResults" Version="3.16.0" />
+    <PackageReference Include="Lestecon.Result" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
   </ItemGroup>
 
 </Project>
